--- a/client/css/desktop.css
+++ b/client/css/desktop.css
@@ -1,9 +1,14 @@
+
+
+
 /*!
 * Ext JS Library 4.0
 * Copyright(c) 2006-2011 Sencha Inc.
 * licensing@sencha.com
 * http://www.sencha.com/license
 */
+
+
 
 #poweredby {
     position: absolute;
@@ -236,15 +241,11 @@ div.ux-taskbar div.x-toolbar {
     background-image: url( ../images/32x32/settings.png ) !important;
 }
 
-.add {
-    background-image:url(../../shared/icons/fam/add.gif) !important;
-}
+
 .option {
     background-image:url(../../shared/icons/fam/plugin.gif) !important;
 }
-.remove {
-    background-image:url(../../shared/icons/fam/delete.gif) !important;
-}
+
 .save {
     background-image:url(../../shared/icons/save.gif) !important;
 }
@@ -256,23 +257,25 @@ div.ux-taskbar div.x-toolbar {
 }
 
 /*----------------------------------------------------
-    IM window icons
+    Common icons 16x16
 */
 
 
 .application-systemstatus {
     background-image:url( ../images/16x16/application-monitor.png ) !important;
 }
-
-
+.add16 {
+    background-image:url(../images/16x16/add.png) !important;
+}
+.remove16 {
+    background-image:url(../images/16x16/remove.png) !important;
+}
 .user {
     background-image:url( ../images/16x16/male.png ) !important;
 }
 .user32 {
     background-image:url( ../images/32x32/male.png ) !important;
 }
-
-
 
 .user-add {
     background-image:url(../../shared/icons/fam/user_add.gif) !important;
@@ -297,6 +300,10 @@ div.ux-taskbar div.x-toolbar {
 .user-suit {
     background-image:url(../../shared/icons/fam/user_suit.gif) !important;
 }
+
+/*----------------------------------------------------
+    Start Button
+*/
 
 
 /*----------------------------------------------------
