--- a/client/css/desktop.css
+++ b/client/css/desktop.css
@@ -1,12 +1,8 @@
-
-
-
-/*!
-* Ext JS Library 4.0
-* Copyright(c) 2006-2011 Sencha Inc.
-* licensing@sencha.com
-* http://www.sencha.com/license
-*/
+/* 
+ * desktop CSS
+ * (C) Androme 2015
+ * 
+ */
 
 
 
@@ -266,6 +262,9 @@ div.ux-taskbar div.x-toolbar {
 }
 .add16 {
     background-image:url(../images/16x16/add.png) !important;
+}
+.favorite16 {
+    background-image:url(../images/16x16/favorite.png) !important;
 }
 .remove16 {
     background-image:url(../images/16x16/remove.png) !important;
