- modifs mineures (ajour de code couleur)

--- a/client/modules/logcenter/rsc/style.css
+++ b/client/modules/logcenter/rsc/style.css
@@ -24,6 +24,9 @@ background-color:blue !important;
 .logcenter-green_cell{
 background-color:#8FCF3C !important;    
 }
+.logcenter-greenclear_cell{
+background-color:#C4FCCA !important;    
+}
 .logcenter-orange_cell{
 background-color:#FF5B2B !important;    
 }
